// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on <AppRouter /> this test should make a snapshot with comoponent <Register /> correctle 1`] = `
<section
  className="row p-0 m-0"
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <article
    className="col-md-6 d-flex flex-column justify-content-center align-items-center"
  >
    <div
      className="border rounded-circle overflow-hidden shadow-sm p-3"
    >
      <img
        alt="register"
        className="img-fluid"
        src="register.svg"
        style={
          Object {
            "height": "250px",
            "width": "250px",
          }
        }
      />
    </div>
    <div
      className="text-center p-2 mt-3"
    >
      <p
        className="fs-5 fw-bold"
      >
         !Bienvenido a Calendar! 
      </p>
      <small
        className="fw-normal fs-6"
      >
         Registrate para crear tu agenda web. 
      </small>
      <hr />
      <span
        className="m-0"
      >
        ¿Tienes cuenta? Haz click en 
        <a
          className="text-decoration-none"
          href="/login"
          onClick={[Function]}
        >
          Inicia sesión
        </a>
      </span>
    </div>
  </article>
  <article
    className="col-md-6 bg-primary d-flex flex-column justify-content-center align-items-center"
  >
    <h1
      className="text-white fs-3 p-4"
    >
       Registrarte 
    </h1>
    <form
      className="form-control my-5 form_container bg-white border-0 rounded p-3"
      onSubmit={[Function]}
    >
      <div
        className="mb-3 d-flex flex-column"
      >
        <label
          className="fw-normal form-label"
          htmlFor="name"
        >
          Nombre
        </label>
        <input
          className="border-0 border-bottom form_container__field"
          id="name"
          name="name"
          onChange={[Function]}
          placeholder="Ingrese su nombre..."
          type="text"
          value=""
        />
      </div>
      <div
        className="mb-3 d-flex flex-column"
      >
        <label
          className="fw-normal form-label"
          htmlFor="email"
        >
          Correo electronico:
        </label>
        <input
          className="border-0 border-bottom form_container__field"
          id="email"
          name="email"
          onChange={[Function]}
          placeholder="Ingrese su email..."
          type="email"
          value=""
        />
      </div>
      <div
        className="mb-3 d-flex flex-column"
      >
        <label
          className="fw-normal form-label"
          htmlFor="password"
        >
          Contraseña:
        </label>
        <input
          className="border-0 border-bottom form_container__field"
          id="password"
          name="password"
          onChange={[Function]}
          placeholder="Ingrese su contraseña..."
          type="password"
          value=""
        />
      </div>
      <div
        className="mb-3 d-flex flex-column"
      >
        <label
          className="fw-normal form-label"
          htmlFor="passwordConfirm"
        >
          Repetir contraseña:
        </label>
        <input
          className="border-0 border-bottom form_container__field"
          id="passwordConfirm"
          name="passwordConfirm"
          onChange={[Function]}
          placeholder="Repita su contraseña..."
          type="password"
          value=""
        />
      </div>
      <button
        className="btn btn-primary rounded p-2 form_container__button form_container__button-disabled"
        disabled={true}
        type="submit"
      >
        Registrarme
      </button>
    </form>
  </article>
</section>
`;

exports[`Test on <AppRouter /> this test should make a snapshot with component <Loading /> corretly 1`] = `
<section
  className="d-flex justify-content-center align-items-center min-vh-100 bg-primary"
>
  <div
    className="lds-ring"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</section>
`;

exports[`Test on <AppRouter /> this test should make a snapshot with component <Login /> corretly 1`] = `
<section
  className="row p-0 m-0"
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <article
    className="col-md-6 d-flex flex-column justify-content-center align-items-center"
  >
    <div
      className="border rounded-circle overflow-hidden shadow-sm p-3"
    >
      <img
        alt="login"
        className="img-fluid"
        src="login.svg"
        style={
          Object {
            "width": "250px",
          }
        }
      />
    </div>
    <div
      className="text-center p-2 mt-3"
    >
      <p
        className="fs-5 fw-bold"
      >
         !Bienvenido a Calendar! 
      </p>
      <small
        className="fw-normal fs-6"
      >
         Inicie sesión para abrir su agenda web. 
      </small>
      <hr />
      <span
        className="m-0"
      >
        ¿No tienes cuenta? Haz click en 
        <a
          className="text-decoration-none"
          href="/register"
          onClick={[Function]}
        >
          Registrarme
        </a>
      </span>
    </div>
  </article>
  <article
    className="col-md-6 bg-primary d-flex flex-column justify-content-center align-items-center"
  >
    <h1
      className="text-white fs-3 p-4"
    >
       Inicia Sesión 
    </h1>
    <form
      className="form-control my-5 form_container bg-white border-0 rounded p-3"
      onSubmit={[Function]}
    >
      <div
        className="mb-3 d-flex flex-column"
      >
        <label
          className="fw-normal form-label"
          htmlFor="email"
        >
          Correo electronico:
        </label>
        <input
          className="border-0 border-bottom form_container__field"
          id="email"
          name="email"
          onChange={[Function]}
          placeholder="Ingrese su email..."
          type="email"
          value=""
        />
      </div>
      <div
        className="mb-3 d-flex flex-column"
      >
        <label
          className="fw-normal form-label"
          htmlFor="password"
        >
          Contraseña:
        </label>
        <input
          className="border-0 border-bottom form_container__field"
          id="password"
          name="password"
          onChange={[Function]}
          placeholder="Ingrese su contraseña..."
          type="password"
          value=""
        />
      </div>
      <button
        className="btn btn-primary rounded p-2 form_container__button form_container__button-disabled"
        disabled={true}
        type="submit"
      >
        Iniciar sesión
      </button>
    </form>
  </article>
</section>
`;

exports[`Test on <AppRouter /> this test should make a snapshot with component <PageNotFound /> correctly 1`] = `
<section
  className="d-flex flex-column justify-content-center align-items-center"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <article
    className="container p-2"
  >
    <img
      alt="logo 404"
      className="d-block mx-auto img-fluid"
      src="error404.svg"
      style={
        Object {
          "width": "350px",
        }
      }
    />
    <p
      className="text-center fs-3"
    >
      Lo sentimos, no se ha encontrado la URL
    </p>
  </article>
  <button
    className="btn btn-dark p-2"
    onClick={[Function]}
  >
    Regresar
  </button>
</section>
`;

exports[`Test on <AppRouter /> this test should show the children of the component <PrivateRoute /> 1`] = `
<section
  className="calendar_container"
>
  <nav
    className="navbar navbar-primary bg-primary"
  >
    <section
      className="container-fluid"
    >
      <span
        className="text-white text-capitalize"
      >
        Hola, 
         !
      </span>
      <button
        className="btn btn-outline-light p-2 rounded"
        onClick={[Function]}
      >
        <i
          className="fa-solid fa-arrow-right-from-bracket"
        />
        <span>
           Logout 
        </span>
      </button>
    </section>
  </nav>
  <div
    className="rbc-calendar"
  >
    <div
      className="rbc-toolbar"
    >
      <span
        className="rbc-btn-group"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          Hoy
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          Anterior
        </button>
        <button
          onClick={[Function]}
          type="button"
        >
          Siguiente
        </button>
      </span>
      <span
        className="rbc-toolbar-label"
      >
        junio 2022
      </span>
      <span
        className="rbc-btn-group"
      >
        <button
          className="rbc-active"
          key="month"
          onClick={[Function]}
          type="button"
        >
          Mes
        </button>
        <button
          className=""
          key="week"
          onClick={[Function]}
          type="button"
        >
          Semana
        </button>
        <button
          className=""
          key="day"
          onClick={[Function]}
          type="button"
        >
          Día
        </button>
        <button
          className=""
          key="agenda"
          onClick={[Function]}
          type="button"
        >
          Agenda
        </button>
      </span>
    </div>
    <div
      aria-label="Month View"
      className="rbc-month-view"
      role="table"
    >
      <div
        className="rbc-row rbc-month-header"
        role="row"
      >
        <div
          className="rbc-header"
          key="header_0"
        >
          <span
            aria-sort="none"
            role="columnheader"
          >
            lun.
          </span>
        </div>
        <div
          className="rbc-header"
          key="header_1"
        >
          <span
            aria-sort="none"
            role="columnheader"
          >
            mar.
          </span>
        </div>
        <div
          className="rbc-header"
          key="header_2"
        >
          <span
            aria-sort="none"
            role="columnheader"
          >
            mié.
          </span>
        </div>
        <div
          className="rbc-header"
          key="header_3"
        >
          <span
            aria-sort="none"
            role="columnheader"
          >
            jue.
          </span>
        </div>
        <div
          className="rbc-header"
          key="header_4"
        >
          <span
            aria-sort="none"
            role="columnheader"
          >
            vie.
          </span>
        </div>
        <div
          className="rbc-header"
          key="header_5"
        >
          <span
            aria-sort="none"
            role="columnheader"
          >
            sáb.
          </span>
        </div>
        <div
          className="rbc-header"
          key="header_6"
        >
          <span
            aria-sort="none"
            role="columnheader"
          >
            dom.
          </span>
        </div>
      </div>
      <div
        className="rbc-month-row"
        role="rowgroup"
      >
        <div
          className="rbc-row-bg"
        >
          <div
            className="rbc-day-bg rbc-off-range-bg"
          />
          <div
            className="rbc-day-bg rbc-off-range-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
        </div>
        <div
          className="rbc-row-content"
          role="row"
        >
          <div
            className="rbc-row "
          >
            <div
              className="rbc-date-cell rbc-off-range"
              key="header_0"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                30
              </button>
            </div>
            <div
              className="rbc-date-cell rbc-off-range"
              key="header_1"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                31
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_2"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                01
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_3"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                02
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_4"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                03
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_5"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                04
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_6"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                05
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rbc-month-row"
        role="rowgroup"
      >
        <div
          className="rbc-row-bg"
        >
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg rbc-today"
          />
        </div>
        <div
          className="rbc-row-content"
          role="row"
        >
          <div
            className="rbc-row "
          >
            <div
              className="rbc-date-cell"
              key="header_0"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                06
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_1"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                07
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_2"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                08
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_3"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                09
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_4"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                10
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_5"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                11
              </button>
            </div>
            <div
              className="rbc-date-cell rbc-now rbc-current"
              key="header_6"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                12
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rbc-month-row"
        role="rowgroup"
      >
        <div
          className="rbc-row-bg"
        >
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
        </div>
        <div
          className="rbc-row-content"
          role="row"
        >
          <div
            className="rbc-row "
          >
            <div
              className="rbc-date-cell"
              key="header_0"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                13
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_1"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                14
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_2"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                15
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_3"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                16
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_4"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                17
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_5"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                18
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_6"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                19
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rbc-month-row"
        role="rowgroup"
      >
        <div
          className="rbc-row-bg"
        >
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
        </div>
        <div
          className="rbc-row-content"
          role="row"
        >
          <div
            className="rbc-row "
          >
            <div
              className="rbc-date-cell"
              key="header_0"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                20
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_1"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                21
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_2"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                22
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_3"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                23
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_4"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                24
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_5"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                25
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_6"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                26
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rbc-month-row"
        role="rowgroup"
      >
        <div
          className="rbc-row-bg"
        >
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg"
          />
          <div
            className="rbc-day-bg rbc-off-range-bg"
          />
          <div
            className="rbc-day-bg rbc-off-range-bg"
          />
          <div
            className="rbc-day-bg rbc-off-range-bg"
          />
        </div>
        <div
          className="rbc-row-content"
          role="row"
        >
          <div
            className="rbc-row "
          >
            <div
              className="rbc-date-cell"
              key="header_0"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                27
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_1"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                28
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_2"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                29
              </button>
            </div>
            <div
              className="rbc-date-cell"
              key="header_3"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                30
              </button>
            </div>
            <div
              className="rbc-date-cell rbc-off-range"
              key="header_4"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                01
              </button>
            </div>
            <div
              className="rbc-date-cell rbc-off-range"
              key="header_5"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                02
              </button>
            </div>
            <div
              className="rbc-date-cell rbc-off-range"
              key="header_6"
              role="cell"
            >
              <button
                className="rbc-button-link"
                onClick={[Function]}
                role="cell"
                type="button"
              >
                03
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <article
    className="d-flex justify-content-center"
  >
    <Portal
      containerInfo={
        <div
          class="ReactModalPortal"
        />
      }
    />
  </article>
  <button
    className="btn btn-primary shadow rounded-circle button_icon"
    onClick={[Function]}
  >
    <i
      className="fa-solid fa-plus"
    />
  </button>
</section>
`;
